--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "mocha": "^8.2.1",
-    "msw": "^0.24.2"
+    "msw": "^0.24.2",
+    "vite": "^6.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
